Update docs to 5.74

--- a/visual/new_features.html
+++ b/visual/new_features.html
@@ -144,6 +144,7 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <p class="Normal">Visual 5.71 adds log-log and semilog plots to graphs, and the ability to offset the graph origin.</p>
       <p class="Normal">Visual 5.72 corrects a bug in graphs where plotting (0,.001) followed by (.001,.001) failed to autoscale correctly. Also added documentation explaining what objects are used to represent gdots, gcurves, ghbars, and gvbars.</p>
       <p class="Normal">Visual 5.73 corrects some bugs in the controls module and the text object.</p>
+      <p class="Normal">Visual 5.74 corrects an error in the display of ellipsoids.</p>
       <p class="Normal"><strong><font color="#0000a0">Choose a topic:</font></strong></p>
       <blockquote>
         <p class="Normal"><strong><font color="#0000a0"><a href="#credits">Credits</a></font></strong></p>
